--- a/JUN-tong/JUN-tong/ShuttleBusDetailView.storyboard
+++ b/JUN-tong/JUN-tong/ShuttleBusDetailView.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wEg-1b-3Cp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wEg-1b-3Cp">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -143,19 +143,8 @@
                                     <constraint firstAttribute="height" constant="1" id="bFM-Eb-4aM"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v6B-JC-1FO">
-                                <rect key="frame" x="0.0" y="43" width="15" height="15"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="15" id="K8a-jo-Pwg"/>
-                                    <constraint firstAttribute="width" constant="15" id="UUd-qS-zqA"/>
-                                </constraints>
-                                <state key="normal" title="Button" image="blackHeart"/>
-                                <connections>
-                                    <action selector="favoriteButtionClick:" destination="tIS-u4-hFI" eventType="touchUpInside" id="xA2-JR-tfY"/>
-                                </connections>
-                            </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qfv-3K-kFb">
-                                <rect key="frame" x="0.0" y="78.5" width="375" height="377.5"/>
+                                <rect key="frame" x="0.0" y="86" width="375" height="370"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4pU-6m-zja">
                                     <size key="itemSize" width="50" height="50"/>
@@ -205,7 +194,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="해대" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="plU-QJ-fo3">
-                                                <rect key="frame" x="-10" y="0.0" width="57.5" height="30"/>
+                                                <rect key="frame" x="169.5" y="0.0" width="57.5" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="9"/>
                                                 <color key="textColor" red="0.0" green="0.17254901959999999" blue="0.25490196079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -240,7 +229,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="공대4호관" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l5I-8v-RYy">
-                                <rect key="frame" x="0.0" y="0.0" width="90" height="40"/>
+                                <rect key="frame" x="142.5" y="0.0" width="90" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="90" id="wEl-kO-jla"/>
                                     <constraint firstAttribute="height" constant="40" id="zEp-nM-A67"/>
@@ -249,10 +238,23 @@
                                 <color key="textColor" red="0.0" green="0.17254901959999999" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v6B-JC-1FO">
+                                <rect key="frame" x="172.5" y="36" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="K8a-jo-Pwg"/>
+                                    <constraint firstAttribute="width" constant="30" id="UUd-qS-zqA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
+                                <inset key="imageEdgeInsets" minX="7" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="Button" image="blackHeart"/>
+                                <connections>
+                                    <action selector="favoriteButtionClick:" destination="tIS-u4-hFI" eventType="touchUpInside" id="xA2-JR-tfY"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="v6B-JC-1FO" firstAttribute="top" secondItem="u6l-eO-cni" secondAttribute="bottom" constant="-7.5" id="5D3-rw-4i5"/>
+                            <constraint firstItem="v6B-JC-1FO" firstAttribute="top" secondItem="u6l-eO-cni" secondAttribute="bottom" constant="-15" id="5D3-rw-4i5"/>
                             <constraint firstItem="qfv-3K-kFb" firstAttribute="top" secondItem="v6B-JC-1FO" secondAttribute="bottom" constant="20" id="5jX-ma-gCj"/>
                             <constraint firstItem="xdt-PF-dSe" firstAttribute="trailing" secondItem="cuf-Bv-tvN" secondAttribute="trailing" id="6bq-pl-7Aa"/>
                             <constraint firstItem="u6l-eO-cni" firstAttribute="top" secondItem="l5I-8v-RYy" secondAttribute="bottom" constant="10" id="6zn-05-Bw4"/>
@@ -301,7 +303,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="576"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="공대4호관" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zg8-Me-2lt">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="공대4호관" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zg8-Me-2lt">
                                 <rect key="frame" x="142" y="0.0" width="90" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="90" id="4em-cd-Mp1"/>
@@ -326,7 +328,7 @@
                                     <constraint firstAttribute="height" constant="1" id="kSm-0g-Aem"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mtT-iS-ads">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mtT-iS-ads">
                                 <rect key="frame" x="180" y="43" width="15" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="15" id="dyV-k3-N8z"/>
@@ -388,7 +390,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="해대" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fgj-S0-TF3">
-                                                <rect key="frame" x="-10" y="0.0" width="57.5" height="30"/>
+                                                <rect key="frame" x="169.5" y="0.0" width="57.5" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="9"/>
                                                 <color key="textColor" red="0.0" green="0.17254901959999999" blue="0.25490196079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
